themes/main/src/sass/nacional.scss
@import '_includes/colors';
@import '_includes/query';
@import '_includes/mixins';

@mixin section-name(){
  display: block;
  color: $black-dark;
  text-transform: uppercase;
  border-bottom: 3px solid $red;
  margin-bottom: 10px;
}

#home {
  width: 100%;
  display: inline-block;
  margin-top: 70px;
  padding: 0 10px;
  padding-bottom: 20px;

  h1, h2 {
    margin-top: 0;
  }

  @include get-font(NACIONAL);

  @include media-query(MEDIUM) {
    margin: 220px 5% 0 5%; 
    width: 90%;
  }
}

#home figure {
  margin: 0;
}

#home .featured {
  width: 100%;
  display: inline-block;

  .section-name {
    @include section-name();

    
    @include media-query(MEDIUM) {
      display: none;
    }

  }

  article + article {
    border-top: 1px solid $gray-lighter;
    padding-top: 15px;
    margin-top: 15px;
    @include media-query(MEDIUM) {
      border-top: 0;
      margin-top: 0;
      padding-top: 0;
    }
  }

  .description{
    color: $black-dark;
    margin-top: 5px;
  }

  @include media-query(MEDIUM) {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    max-width: 70%;
  }

  article{
    @include media-query(MEDIUM) {
      margin-bottom: 40px;
    }
  }
}

#home .featured .first {
  figure {
    position: relative;
  }

  figcaption {
    position: absolute;
    bottom: 10px;
    padding: 0 10px;
  }

  img {
    width: 100%;
    border-radius: 5px 5px 5px 5px;
  }

  .title {
    color: white;
    width: 100%;
    padding-bottom: 10px;
  }

  .description{
    display: none;
  }

}

#home .featured .second{
  figure {
    display: flex;
    @include media-query(MEDIUM) {
      display: block;
      width: 100%;
    }
  }

  img {
    max-width: 150px;
    width: 100%;
    border-radius: 5px;
    @include media-query(MEDIUM) {
      max-width: 100%;
    }
  }

  figcaption {
    margin-left: 15px;
    align-self: baseline;
    width: 50%;
    @include media-query(MEDIUM) {
      width: 100%;
      margin-left: 0;
    }
  }

  .description{
    @include media-query(MEDIUM) {
      display: none;
    }
  }
}

#home .featured .first, .third {
  @include media-query(MEDIUM) {
    width: 65%;
  }
}

#home .featured .second, .forth {
  @include media-query(MEDIUM) {
    width: 30%;
  }
}

#home .featured .second, .third, .forth{
  .title {
    @include media-query(MEDIUM) {
      border-left: 3px solid $gray-lighter;
      padding-left: 10px;
      margin-top: 10px;
    }
  }
}

#home .featured .forth {
  .description{
    display: none;
  }
}

#home section + section {
  margin-top: 10px;
}

#home .secondary {
  background-color: $gray-medium;
  border-top: 1px solid $gray-light;
  border-bottom: 1px solid $gray-light;
  flex-flow: row wrap;
  display: flex;
  -webkit-justify-content:         space-around;
  justify-content:         space-around;
  padding-top: 20px;

  @include media-query(MEDIUM) {
    width: 75%;
    background-color: white;
    border: 0;
    padding-top: 0;
    justify-content: space-between;
    flex-wrap: nowrap;
  }

  article {
    width: 45%;
    max-width: 250px;
    margin-bottom: 20px;
    @include media-query(MEDIUM) {
      &:last-of-type {
        display: none;
      }
    }
  }

  article + article {
    @include media-query(MEDIUM) {
      margin-left: 10px;
    }
  }

  .hat{
    @include section-name();
    color: #6b6b6b;
  }

  img{
    border-radius: 5px;
    width: 100%;
  }

}

#home .tertiary {
  display: none;
  @include media-query(MEDIUM) {
    display: inline-block;
    width: 50%;
    article{
      margin-bottom: 40px;
    }
  }
}

#home .opinions{
  width: 100%;
  display: inline-block;

  .section-name {
    @include section-name();
  }

  img{
    border-radius: 50%;
    max-width: 100px;
    height: 100px;
    align-self: center;
    box-shadow: 0 0 0 4px rgba(30, 30, 30, 0.1), inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
  }

  .columnist + .columnist {
    margin-top: 30px;
  }

  .opinion {
    margin-left: 10px;
  }

  .title {
    color: #787878;
    margin-top: 5px;
  }

  date::before {
    content: 'em ';
  }

  date {
    color: #545454;
    font-size: 0.8em;
    font-weight: 700;
  }

}

#home .opinions .columnist {
    display: flex;
    margin-top: 20px;

    &.first img {
      height: 130px;
      max-width: 130px;
    }

    figure {
      flex: 0 0 130px;
      display: flex;
      flex-grow: 0;
      justify-content: center;
      padding-left: 10px;
    }

    .opinion {
      flex-grow: 1;
    }
}

@mixin picture-with-caption(){
  figure {
    margin: 0 auto;
    width: 90%;
    max-width: 360px;
    position: relative;

    img {
      width: 100%;
    }
  }

  figcaption {
    position: absolute;
    bottom: 0px;
    color: white;
    text-shadow: 1px 1px 0px #000, 0 0 0 #fff, 1px 1px 0px #000;
    width: 100%;
    padding-bottom: 20px;
    padding-top: 5px;
    background: linear-gradient(to top, rgba(16, 16, 16, 0.6) 0%, rgba(16,16,16,0.20 ) 100%);

    .title, .credits {
      margin-left: 10px;
    }
  }
}


#home .picture {
    background-color: $gray-medium;
    border-top: 1px solid $gray-light;
    border-bottom: 1px solid $gray-light;
    padding: 20px 0;
    width: 100%;
    @include picture-with-caption();
    @include media-query(MEDIUM) {
      background-color: white;
      border-top: 0;
      border-bottom: 0;
      width: 50%;
      display: inline-block;
    }
}

#home .gallery-images{
  max-width: 360px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  @include picture-with-caption();

  figure {
    max-height: 230px;
    overflow: hidden;
  }

  figure, .images {
    width: 95%;
    margin: 0 auto;
    background-color: rgba(50,50,50,1);
  }

  .section-name {
    @include section-name();
    margin-bottom: 15px;
  }
}

#home .gallery-images .images {
  display: flex;
}

#home .gallery-images .images .slider {
  padding: 0 15px;
  height: 100px;
  overflow-y: scroll;
  display: flex;

  img {
    max-height: 70px;
    align-self: center;
    border-radius: 5px;

    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-duration: 0.1s;
    transition-duration: 0.1s;
    -webkit-transition-property: border;
    transition-property: border;
    -webkit-transition-timing-function: ease;
    transition-timing-function: ease;
    border: none;

    &:hover {
      cursor: pointer;
      border: 3px solid $gray-lighter;
    }
  }

  img + img {
    margin-left: 10px;
  }

  .active {
    border: 3px solid $gray-lighter;
  }
}

#home .gallery-images .images{

  &.disable-left::before {
    display: none;
  }

  &.disable-right::after {
    display: none;
  }

  &::after {
    content: ">";
    color: white;
    font-size: 1.2em;
    position: absolute;
    z-index: 10;
    font-weight: bold;
    font-family: 'Merriweather Sans', serif;
    padding-top: 25px;
    padding-right: 10px;
    padding-left: 5px;
    right: 18px;
    height: 75px;
    background: linear-gradient(
          to left,
          rgba(16, 16, 16, 1),
          rgba(16, 16, 16, 0.2) 55%,
          transparent
          );
  }

  &::before {
    content: "<";
    color: white;
    font-size: 1.2em;
    position: absolute;
    z-index: 10;
    font-weight: bold;
    font-family: 'Merriweather Sans', serif;
    padding-top: 25px;
    padding-left: 10px;
    padding-right: 5px;
    left: 19px;
    height: 75px;
    background: linear-gradient(
            to right,
            rgba(16, 16, 16, 1),
            rgba(16, 16, 16, 0.2) 55%,
            transparent
            );
  }
}

